Fix CTA wrapping

--- a/src/stylesheets/components/case-study-item.sass
+++ b/src/stylesheets/components/case-study-item.sass
@@ -142,6 +142,7 @@ $padding: clamp($baseline * .5, 2vw, $baseline)
 
   &__title
     margin: auto 0 0
+    text-wrap: balance
 
     &::after
       @extend %script-arrow
